--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-ca">
 <head>
-  <meta charest="utf-8">
+  <meta charset="utf-8">
   <title>HTML template</title>
-  <meta name="<meta name="viewport" content="width=device-width,initial-scale=1">"
-</<head>
-<<body>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
 
   <!-- ALL the HTML content goes in here -->
 
   <header>
-    <h1>HTML <template</h1>
+    <h1>HTML template</h1>
   </header>
